# python-pam

./: .coveragerc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  ChangeLog.md  MANIFEST.in  Makefile  PAM.py  PKGBUILD  README.md  pam.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  stress_test_threaded.py  tox.ini  version.py
.github/workflows/: main.yml
examples/: pam.py
pam/: __init__.py  __internals.py  conftest.py  internals.py  pam.py
python-pam/pam/: __init__.py  __internals.py  pam.py  version.py
src/: pam.py  version.py
src/pam/: __init__.py  __internals.py  pam.py  version.py
tests/: .coveragerc  test_internals.py  test_pam.py
