[project]
name = "python-pam"
version = "2.1.0-beta1"
description = ""
authors = [{name = "David Ford", email = "david@blue-labs.org"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "six",
]

[tool.poetry]
packages = [{include = "pam", from = "python-pam"}]

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
pytest-cov = "^4.0.0"
pylint = "^3.0.0"
tox = "^4.0.0"
bandit = "*"

[tool.coverage.run]
source = ["pam"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 85.0

[tool.bandit]
exclude_dirs = ["./venv", "./test", ]
recursive = true

[tool.pylint.main]
jobs = 0

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-branches",
    "too-many-statements",
    "too-many-locals",
    "too-many-instance-attributes",
    "too-few-public-methods",
    "wrong-import-position",  # Imports are intentionally after version check
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
